# HQJfQMMUCNdw

./: .gitattributes  .gitignore  README.md  article.ipynb  article.md  report.md  requirements.txt
.github/: CODEOWNERS
ohtm_pipeline/: .gitattributes  .gitignore  CITATION.cff  README.md  demo_main.py  labeling_clustering.py  main.py  main_template.py  print_ohtm_file.py  pyproject.toml  requirements.txt  topic_labels_template.txt
ohtm_pipeline/Demo/: demo_ohtm_file.ohtm  demo_ohtm_file_2.ohtm  demo_ohtm_file_trained.ohtm  demo_ohtm_file_trained_topic_words_20_words.txt  german_stopwords_standard.txt
ohtm_pipeline/ohtm_pipeline.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ohtm_pipeline/ohtm_pipeline/basic_functions/: anonymize_function.py  ohtm_file_creation.py  ohtm_file_inferred_combination.py  save_load.py
ohtm_pipeline/ohtm_pipeline/mallet_wrapper/: _utils_any2vec.py  base_any2vec.py  coherencemodel.py  interfaces.py  keyedvectors.py  ldamallet.py  ldamodel.py  matutils.py  setup.py  termsim.py  utils_any2vec.py  word2vec.py
ohtm_pipeline/ohtm_pipeline/ohtm_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ohtm_pipeline/ohtm_pipeline/pipeline_function/: pipeline.py  upgrade_and_labeling.py
ohtm_pipeline/ohtm_pipeline/preprocessing_functions/: chunking.py  lemmatization.py  preprocess_outstr.py  preprocessing.py  stopwords.py
ohtm_pipeline/ohtm_pipeline/topic_evaluation/: bar_graph.py  heatmaps.py  print_topics.py  simple_bar_graph.py  topics_prints.py
ohtm_pipeline/ohtm_pipeline/topic_modeling_functions/: topic_inferring.py  (+1 more)
(+35 files in other folders)
